--- a/BiteSquad/styles.css
+++ b/BiteSquad/styles.css
@@ -2,7 +2,8 @@
 
 body {
     font-family: Verdana, Geneva, Tahoma, sans-serif, sans-serif;
-    background-image: none;
+    background:black;
+    color: var(--text-colour);
     background-position: center;
     background-size: cover;
     
@@ -28,19 +29,23 @@ header {
     background-color:rgb(185, 124, 33);
 
 }
-.header ul
+  header ul
 {
     display: flex;
     align-items: center;
+    justify-content: space-between;
 }
-.header ul li:hover
+header ul li:hover
 {
     color:rgb(245, 253, 8)
+  
 }
-.nav ul li{
+nav ul li{
     padding: 0 15px;
     font-size: 14px;
-    font-weight: bold;
+    font-weight:bold ;
+    margin: 0 30px;
+    transition: all .50 ease;
 }
 
 
@@ -121,17 +126,20 @@ nav ul li a {
     padding: 10px;
     /* margin: 10px; */
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    align-items: center;
 }
 
 .card figure{
     width: auto;
     height: 200px;
     object-fit: contain;
+    align-items: center;
 }
 .card img {
     width: 100%;
     height: 100%;
     border-radius: 5px;
+    align-items: center;
 }
 
 .card h3 {
@@ -141,6 +149,7 @@ nav ul li a {
     text-align: center;
     margin-top: 10px;
     font-size: 24px;
+    align-items: center;
 }
 
 .card p {
@@ -148,6 +157,7 @@ nav ul li a {
     font-size: 16px;
     color: #000022;
     font-weight: 600;
+    align-items: center;
 }
 
 footer {
